@@ -107,10 +107,32 @@ public abstract class AbstractConverter implements Converter {
      *  This partial may be incomplete and only getFieldType(int) should be used
      * @param object  the object to convert
      * @param chrono  the chronology to use, which is the non-null result of getChronology()
-     * @return the array of field values that match the 
+     * @return the array of field values that match the fieldSource, must be non-null valid
+     * @throws ClassCastException if the object is invalid
      */
     public int[] getPartialValues(ReadablePartial fieldSource, Object object, Chronology chrono) {
         long instant = getInstantMillis(object, chrono);
+        return chrono.get(fieldSource, instant);
+    }
+
+    /**
+     * Extracts the values of the partial from an object of this converter's type.
+     * The chrono parameter is a hint to the converter, should it require a
+     * chronology to aid in conversion.
+     * 
+     * @param fieldSource  a partial that provides access to the fields.
+     *  This partial may be incomplete and only getFieldType(int) should be used
+     * @param object  the object to convert
+     * @param chrono  the chronology to use, which is the non-null result of getChronology()
+     * @param parser  if converting from a String, the given parser is preferred
+     * @return the array of field values that match the fieldSource, must be non-null valid
+     * @throws ClassCastException if the object is invalid
+     * @since 1.3
+     */
+    public int[] getPartialValues(ReadablePartial fieldSource, Object object, Chronology chrono,
+                                  DateTimeFormatter parser)
+    {
+        long instant = getInstantMillis(object, chrono, parser);
         return chrono.get(fieldSource, instant);
     }
 
